--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,7 @@ src/AttendanceManagement.HttpApi.Host/Logs/*
 src/AttendanceManagement.DbMigrator/Logs/*
 src/AttendanceManagement.Blazor.Server/Logs/*
 src/AttendanceManagement.Blazor.Server.Tiered/Logs/*
+src/AttendanceManagement.Blazor/Logs/*
 
 # Use abp install-libs to restore.
 **/wwwroot/libs/*
