latest update -- partial UI

--- a/src/AttendanceManagement.Blazor.Client/wwwroot/appsettings.json
+++ b/src/AttendanceManagement.Blazor.Client/wwwroot/appsettings.json
@@ -8,5 +8,13 @@
     "Default": {
       "BaseUrl": "https://localhost:44359"
     }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Microsoft.AspNetCore.Components": "Debug"
+    }
   }
 }
