--- a/src/AttendanceManagement.Blazor/AttendanceManagement.Blazor.csproj
+++ b/src/AttendanceManagement.Blazor/AttendanceManagement.Blazor.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Bundling" Version="9.3.5" />
     <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.LeptonXLiteTheme.Bundling" Version="4.1.0-preview*" />
     <ProjectReference Include="..\AttendanceManagement.Blazor.Client\AttendanceManagement.Blazor.Client.csproj" />
+    <ProjectReference Include="..\AttendanceManagement.Application.Contracts\AttendanceManagement.Application.Contracts.csproj" />
+    <ProjectReference Include="..\AttendanceManagement.HttpApi.Client\AttendanceManagement.HttpApi.Client.csproj" />
   </ItemGroup>
 
 </Project>
